[package]
name = "tracker-vis"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
serde_json = "1"
chrono = "0.4"
csv = "1.3"